k8s/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      service: api-gateway
  template:
    metadata:
      labels:
        service: api-gateway
    spec:
      containers:
        - image: kshubhamm/api-gateway:0.0.2
          name: gateway-service
          ports:
            - containerPort: 8000
