k8s/petDB-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pet-db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      service: petDB
  template:
    metadata:
      labels:
        service: petDB
    spec:

      restartPolicy: Always

      volumes:
        - name: pet-storage
          persistentVolumeClaim:
            claimName: pet-db-pvc

      containers:
        - image: mongo
          name: pet-database
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: pet-storage
              mountPath: /var/lib/mongodb

        - image: mongo-express
          name: pet-database-surfer
          ports:
            - containerPort: 8081
