k8s/gateway-clusterIP-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    service: api-gateway
  ports:
    - port: 8000
      targetPort: 8000
