k8s/masterDB-clusterIP-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: master-db-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    service: masterDB
  ports:
    - port: 27017
      targetPort: 27017
      name: master-database

    - port: 8081
      targetPort: 8081
      name: master-database-surfer
