k8s/pet-clusterIP-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pet-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    service: api-pet
  ports:
    - port: 8003
      targetPort: 8003
